--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="A tiny CSS Houdini module that allows to add a squircle shape to HTML elements" />
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon96x96.png">
   <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/favicon192x192.png">
+  <!-- Порочный запах засохшей рыбы; Заиндевевший комок нищеты; Обмылок мысли зажав в коленях; Подвал наполнил равнодушный сквозняк -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Squircle CSS Houdini</title>
 </head>
 
 <body>
